gcc/testsuite/g++.dg/torture/pr70621.C
float foo();

struct A
{
  static float x;  // { dg-message "previous declaration" }
};

double A::x = foo();  // { dg-error "conflicting declaration" }

void bar()
{
  A::x = 0;
}
